syntax = "proto3";

package cad_rs;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/attilaolah/cad-rs/proto";

message Captcha {
  string id = 1; // UUID

  enum Type {
    UNKNOWN = 0;
    ALPHANUM_4 = 4;
    ALPHANUM_5 = 5;
  }
  Type type = 2;

  message Sample {
    string sha1 = 1;
    string content_type = 2;
    // HTTP Date response header value:
    google.protobuf.Timestamp generated_at = 3;
    bytes data = 4;
  }

  repeated Sample samples = 3;

  message Label {
    // Captcha value + 1, base-36-encoded.
    // Zero means unknown/unset. Subtract one and base36-decode to get the value.
    int32 b36p1 = 3;
  }
}
